--- a/src/app/shared/components/survey-card/survey-card.scss
+++ b/src/app/shared/components/survey-card/survey-card.scss
@@ -15,7 +15,7 @@
   }
 
   &__category {
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 12px;
     color: var(--color-text-dark);
   }
@@ -32,7 +32,7 @@
     padding: 4px 12px;
     background-color: var(--color-accent);
     border-radius: 6px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
   }
 
@@ -49,7 +49,7 @@
 
   .card__category {
     color: var(--color-primary);
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 12px;
   }
 
